:bug: Fix color picker blurry bitmap

--- a/frontend/src/app/main/ui/workspace/colorpicker.scss
+++ b/frontend/src/app/main/ui/workspace/colorpicker.scss
@@ -132,6 +132,11 @@
   transform: translate(calc(-1 * $s-12), calc(-1 * $s-12));
 }
 
+.picker-detail {
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
 .select {
   width: $s-116;
 }
